--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -5,6 +5,9 @@
     "emnpuzzled",
     "Blaise",
     "Aryavarta",
-    "unfalsifiable"
+    "unfalsifiable",
+    "Bharatvarsha",
+    "Thee",
+    "fought"
   ]
 }
