--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,4 +1,9 @@
 {
+  "baseFontSize": 17,
   "accentColor": "",
-  "baseFontSize": 18
+  "interfaceFontFamily": "Raleway",
+  "cssTheme": "Minimal",
+  "theme": "obsidian",
+  "nativeMenus": false,
+  "translucency": true
 }
